Updated following experiences with 5.5.0.Beta1